[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Jeff-1.png.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Jeff-2.png.png" type="Texture" id=3]
[ext_resource path="res://PlayerAnimation.gd" type="Script" id=4]
[ext_resource path="res://fonts/arial.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sprites/Jeff_walking-1.png.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Jeff_walking-2.png.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 3.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 26
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 5 )

[node name="Player" type="Node"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2D"]
position = Vector2( 240, 360 )
scale = Vector2( 6.78125, 6.78125 )
frames = SubResource( 1 )

[node name="StatsCanvas" type="CanvasLayer" parent="."]
visible = false

[node name="Name" type="Label" parent="StatsCanvas"]
margin_left = 30.0
margin_top = 513.0
margin_right = 133.0
margin_bottom = 543.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Name"

[node name="Health" type="Label" parent="StatsCanvas"]
margin_left = 30.0
margin_top = 542.0
margin_right = 132.0
margin_bottom = 566.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Health: "

[node name="Mana" type="Label" parent="StatsCanvas"]
margin_left = 30.0
margin_top = 567.0
margin_right = 133.0
margin_bottom = 591.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Mana:"

[node name="Might" type="Label" parent="StatsCanvas"]
margin_left = 30.0
margin_top = 592.0
margin_right = 133.0
margin_bottom = 616.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Might: "

[node name="Intelligence" type="Label" parent="StatsCanvas"]
margin_left = 30.0
margin_top = 617.0
margin_right = 136.0
margin_bottom = 642.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Intelligence:"

[node name="Luck" type="Label" parent="StatsCanvas"]
margin_left = 30.0
margin_top = 642.0
margin_right = 128.0
margin_bottom = 672.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Luck: "

[node name="Determination" type="Label" parent="StatsCanvas"]
margin_left = 30.0
margin_top = 667.0
margin_right = 166.0
margin_bottom = 691.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Determination: "

[node name="WalkingTimer" type="Timer" parent="."]
wait_time = 0.8

[connection signal="timeout" from="WalkingTimer" to="." method="_on_WalkingTimer_timeout"]
